--- a/report.html
+++ b/report.html
@@ -1,9 +1,74 @@
 <!DOCTYPE html>
 <head>
 </head>
-<select id="dropdown">
-</select>
-<div id="container" class="center"></div>
+<style>
+    #stateDropdown {
+        position: relative;
+        top: 60px;
+        left: 100px;
+        width: 100px;
+    }
+    #intro {
+        width: 100%;
+        height: 300px;
+    }
+    #navigation button {
+        position: relative;
+        left: 80px;
+        width: 250px;
+        height: 40px;
+        background-color: #b0b0b0;
+        color: black;
+        font-size: 15px;
+        border: none;
+        cursor: pointer;
+        border-radius: 10px;
+    }
+    #navigation button:hover {
+        position: relative;
+        left: 80px;
+        width: 250px;
+        height: 40px;
+        background-color: steelblue;
+        color: white;
+        font-size: 15px;
+        border: none;
+        cursor: pointer;
+        border-radius: 10px;
+    }
+    #navigation .selected {
+        position: relative;
+        left: 80px;
+        width: 250px;
+        height: 40px;
+        background-color: steelblue;
+        color: white;
+        font-size: 15px;
+        border: none;
+        cursor: pointer;
+        border-radius: 10px;
+    }
+</style>
+<div id="intro">
+
+</div>
+
+</div>
+<div id="navigation">
+    <button id="fullYearButton">Full Year</button>
+    <button id="byMonthButton">By Month</button>
+    <button id="byStateButton">By State</button>
+</div>
+<div id="fullYearArea">
+    <div id="fullYearChart" class="center"></div>
+</div>
+<div id="byStateArea">
+    <select id="stateDropdown" >
+    </select>
+    <div id="byStateChart" class="center"></div>
+</div>
+
+
 <script src="./d3.v7.min.js"></script>
 <script type="module">
 
@@ -11,12 +76,15 @@
 // Declare the chart dimensions and margins.
 const width = 1040;
 const height = 500;
-const marginTop = 200;
+const marginTop = 100;
 const marginRight = 220;
 const marginBottom = 60;
 const marginLeft = 80;
 
-// const data_all = [
+const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", 
+        "Nov", "Dec"];
+
+// const data_states = [
 //     {state_name: "Alaska", month_name: "Jan", death: 0, hospitalized: 0, positive: 0},
 //     {state_name: "Alaska",month_name: "Feb", death: 1, hospitalized: 2, positive: 2},
 //     {state_name: "Alaska",month_name: "Mar", death: 2, hospitalized: 20, positive: 40},
@@ -44,44 +112,84 @@ const marginLeft = 80;
 // ]
 
 
-const data_all = await d3.csv("./uscovid19_2020_sum_all.csv");
+const data_states = await d3.csv("./uscovid19_2020_states.csv");
 
 //Divide all months number by 1 million
-data_all.forEach(function(d) {
+data_states.forEach(function(d) {
     d.death = d.death / 1000000;
     d.hospitalized = d.hospitalized / 1000000;
     d.positive = d.positive / 1000000;
 });
 
 
-// Add a drop down menu to select state
-const all_states = [...new Set(data_all.map(d => d.state_name))];
-console.log('all_states', all_states);
-const state_options = d3.select("#dropdown")
-    .selectAll("option")
-    .data(all_states)
-    .enter()
-    .append("option")
-    .attr("value", d => d)
-    .text(d => d);
-console.log(state_options);
+// Onload display the state chart
+displayStateChart("Alaska");
+
 
 // On change state_filter, update the chart
-d3.select("#dropdown").on("change", function () {
+d3.select("#stateDropdown").on("change", function () {
     const state_filter = d3.select(this).property("value");
     console.log(`selected state: `,state_filter);
     displayStateChart(state_filter);
 });
 
-function displayStateChart (state_filter) {
-    // first empty the container
-    d3.select("#container").selectAll("*").remove();
-    let data_filter = data_all.filter(function(d) {
+d3.select("#fullYearButton").on("click", function() {
+    d3.select("#fullYearArea").style("display", "block");
+    d3.select("#byMonthArea").style("display", "none");
+    d3.select("#byStateArea").style("display", "none");
+
+    d3.select("#byStateButton").attr("class", "");
+    d3.select("#fullYearButton").attr("class", "selected");
+    d3.select("#byMonthButton").attr("class", "");
+
+})
+
+d3.select("#byMonthButton").on("click", function() {
+    d3.select("#fullYearArea").style("display", "none");
+    d3.select("#byMonthArea").style("display", "block");
+    d3.select("#byStateArea").style("display", "none");
+    d3.select("#fullYearButton").attr("class", "");
+    d3.select("#byMonthButton").attr("class", "selected");
+    d3.select("#byStateButton").attr("class", "");
+
+
+})
+
+
+d3.select("#byStateButton").on("click", function () {
+    d3.select("#fullYearArea").style("display", "none");
+    d3.select("#byMonthArea").style("display", "none");
+    d3.select("#byStateArea").style("display", "block");
+
+    // Change byStateButton class name to selected
+    d3.select("#byStateButton").attr("class", "selected");
+    // Change others to not selected
+    d3.select("#fullYearButton").attr("class", "");
+    d3.select("#byMonthButton").attr("class", "");
+});
+
+function displayStateChart (input_state_filter) {
+    const all_states = [...new Set(data_states.map(d => d.state_name))];
+    console.log('all_states', all_states);
+    d3.select("#stateDropdown")
+        .selectAll("option")
+        .data(all_states)
+        .enter()
+        .append("option")
+        .attr("value", d => d)
+        .text(d => d);
+    // first empty the byStateChart
+    d3.select("#byStateChart").selectAll("*").remove();
+    let state_filter = input_state_filter;
+    // Default state is Alaska
+    if (!state_filter) {
+        state_filter = "Alaska";
+    }
+    let data_filter = data_states.filter(function(d) {
         return d.state_name == state_filter;
     });
-    console.log(data_all);
-    const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", 
-        "Nov", "Dec"];
+    console.log(data_states);
+
     
     // Declare the x (horizontal position) scale.
     const x = d3.scaleBand()
@@ -290,8 +398,8 @@ function displayStateChart (state_filter) {
         });
         
     // Append the SVG element.
-    container.append(svg.node());
+    byStateChart.append(svg.node());
 };
-displayStateChart("Texas");
+
 
 </script>
