--- a/report.html
+++ b/report.html
@@ -34,6 +34,7 @@
         padding-top: 10px;
     }
     #chartInstruction{
+        width: 1040px;
         border-bottom: 1px solid black;
         padding-top: 10px;
         padding-bottom: 20px;
