2nd draft final

--- a/report.html
+++ b/report.html
@@ -109,7 +109,7 @@
 US Corona Virus cases in 2020
 </div>
 <div id="intro">
-    The below visualizations of USA COVID-19 cases in 2020 offers a comprehensive and interactive tool for understanding the progression of the pandemic. By examining data from multiple perspectives, we can gain valuable insights into the varying impact of the virus across states and months. The key dates, including lockdown initiation (approximation), nationwide death reports, and lockdown conclusion (approximation), serve as crucial milestones in the narrative, providing context to the data analysis. 
+    The below visualizations of USA COVID-19 cases in 2020 offers a comprehensive and interactive tool for understanding the progression of the pandemic. By examining data from multiple perspectives, we can gain valuable insights into the varying impact of the virus across states and months. The key dates, including lockdown initiation (approximation), nationwide death reports, and lockdown conclusion (approximation), serve as crucial milestones in the narrative, providing context to the data analysis. User can analyze, compare, and draw conclusions from the data visualization, enabling a better understanding of the pandemic’s impact on the nation.
     <p>Data source: <a href="https://covidtracking.com/data/download">https://covidtracking.com/data/download</a></p>
 </div>
 <div id="chartTitle">US COVID-19 Cases in 2020</div>
@@ -233,7 +233,7 @@ data_all.forEach(function(d) {
 });
 
 const fullYearTitle = "US COVID-19 Cases Full Year Trend";
-const fullYearDescription = "The Full Year chart displays the progression of COVID-19 cases over time, focusing on three critical categories: positive cases, hospitalized cases, and death cases. The X-axis represents months, while the Y-axis indicates the number of cases in millions. This line chart allows us to observe the changing patterns and trends across the year, providing insights into the overall impact of the virus nationwide. The second chart displays only death and hospitalized cases to provide a better perspective without the positive cases.";
+const fullYearDescription = "The Full Year chart displays the progression of COVID-19 cases over time, focusing on three critical categories: positive cases, hospitalized cases, and death cases. The X-axis represents months, while the Y-axis indicates the number of cases in millions. This line chart allows us to observe the changing patterns and trends across the year, providing insights into the overall impact of the virus nationwide. The second chart displays only death and hospitalized cases to provide a better perspective without the overwhelming number of positive cases.";
 const fullYearInstruction = "Hover over the data points to view the number of cases for each category. Click on the data points to drill down to the By Month chart.";
 
 const byMonthTitle = "US COVID-19 Cases by Month";
@@ -241,7 +241,7 @@ const byMonthDescription = "The By Month chart displays the progression of COVID
 const byMonthInstruction = "Select month using the dropdown. Hover over the data points to view the number of cases for each category. Click on the data points to drill down to the By State chart.";
 
 const byStateTitle = "US COVID-19 Cases by State";
-const byStateDescription = "The By State chart displays the progression of COVID-19 cases over time, focusing on three critical categories: positive cases, hospitalized cases, and death cases. The X-axis represents months, while the Y-axis indicates the number of cases in millions.";
+const byStateDescription = "The By State chart displays the progression of COVID-19 cases over time, focusing on three critical categories: positive cases, hospitalized cases, and death cases. The X-axis represents months, while the Y-axis indicates the number of cases in millions.The y-axis label max value changes based on the selected state.";
 const byStateInstruction = "Select state using the dropdown. Hover over the data points to view the number of cases for each category. Click on the data points to drill down to the By State and Month chart.";
 
 const byMonthStateTitle = "US COVID-19 Cases by State and Month";
