change upper case

--- a/report.html
+++ b/report.html
@@ -106,7 +106,7 @@
     }
 </style>
 <div id="title">
-US Corona Virus cases in 2020
+US Corona Virus Cases in 2020
 </div>
 <div id="intro">
     The below visualizations of USA COVID-19 cases in 2020 offers a comprehensive and interactive tool for understanding the progression of the pandemic. By examining data from multiple perspectives, we can gain valuable insights into the varying impact of the virus across states and months. The key dates, including lockdown initiation (approximation), nationwide death reports, and lockdown conclusion (approximation), serve as crucial milestones in the narrative, providing context to the data analysis. User can analyze, compare, and draw conclusions from the data visualization, enabling a better understanding of the pandemic’s impact on the nation.
